--- a/Leader2.bib
+++ b/Leader2.bib
@@ -1,5 +1,4 @@
-
-  @TechReport{logisticPCA,
+@TechReport{logisticPCA,
     title = {Dimensionality Reduction for Binary Data through the
       Projection of Natural Parameters},
     author = {Andrew J. Landgraf and Yoonkyung Lee},
@@ -9,6 +8,33 @@
     number = {890},
     url = {http://arxiv.org/abs/1510.06112},
   }
+  
+
+@incollection{von_rueden_roots_2014,
+	title = {The roots and fruits of social status in small-scale human societies},
+	booktitle = {The psychology of social status},
+	publisher = {Springer},
+	author = {Von Rueden, Christopher},
+	editor = {Cheng, Joey T. and Tracy, Jessica L. and Anderson, Cameron},
+	year = {2014},
+	keywords = {Leadership},
+	pages = {179--200},
+	annote = {The following values have no corresponding Zotero field:issn: coden: doi: electronic-resource-num: citation-id: VonRueden 2014cmodified-date: 2017-12-21 17:01:21 +0700},
+	file = {The%20roots%20and%20fruits%20of%20social:/Users/zgarf/Zotero/storage/EPD96NFC/The roots and fruits of social.pdf:application/pdf}
+}
+
+@article{kaplan_evolutionary_2009,
+	title = {The evolutionary and ecological roots of human social organization},
+	volume = {364},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+	author = {Kaplan, Hillard S. and Hooper, Paul L. and Gurven, Michael},
+	year = {2009},
+	keywords = {MA\_leadership, Leadership - general, prelims, HBE, Cooperation/Social Behvior, ANTH 564, SES},
+	pages = {3289--3299},
+	annote = {The following values have no corresponding Zotero field:number: 1533publisher: The Royal Societyissn: coden: doi: citation-id: Kaplan 2009modified-date: 2017-03-28 23:53:34 +0700},
+	file = {The%20evolutionary%20and%20ecologica:/Users/zgarf/Zotero/storage/E3ZS33IM/The evolutionary and ecologica.pdf:application/pdf}
+}
+  
   
 
 @article{pietraszewski_evolution_2019,
