--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -29,30 +29,30 @@ Leadership in WEIRD settings often differs substantially from non-WEIRD settings
 
 >It's good to be king, if just for a while. - Tom Petty
 
-Across human societies, the influence of leaders stands to substantially shape the nature of group structure and group outcomes. Simultaneously, social norms, pressures from competing leaders or rival or cooperative groups, and followers preferences can greatly constrain a leader's agenda. The interactions between the strategies of individual leaders, pressures of followership, and cultural forces and group dynamics likely play an out-sized role in contributing to organizational variation across human populations including social and economic trajectories of populations [@wiessner_risk_1982], and cultural evolutionary processes [@henrich_big_2015]. Leadership and followership are critical in understanding group structure and have been the focus of much scientific attention across psychology, sociology, political science, and managerial studies. Until recently, this very large body of work was relatively disconnected from approaches to leadership in anthropology and biology. Under a unifying evolutionary framework, social and biological scientists have now produced a sizable body of theory on the evolution and cross-cultural patterning of leadership and followership [e.g., @henrich_big_2015; @richerson_tribal_2009; @van_vugt_evolutionary_2006; @pietraszewski_evolution_2019; @hooper_theory_2010 and @kaplan_evolutionary_2009], accompanied by a growing body of empirical results [e.g., @bowser_womens_2010; @cheng_two_2013; @garfield_investigating_2019; @garfield_evolutionary_2019; @von_rueden_leadership_2014; @von_rueden_sex_2018; @smith_leadership_2016]. This approach as been informative. Drawing on the study of leadership in evolutionary perspective and across diverse, small-scale and traditional societies can help develop more generalizable theories and offer applications to shape organizational structure in ways which are more consistent with human evolutionary history and evolved leader-follower psychologies [@von_rueden_leadership_2015; @garfield_review_2019]. Nonetheless, much of this work has focused on community or political leaders, often overlooking the nature of leadership and followership across social domains. Moreover, while the benefits leaders accrue for their services have received substantial attention the costs of leadership for both leaders and followers have also been relatively under-investigated. Current outstanding questions for evolutionary leaderhip scholars include the degree to which the nature of leadership is shaped by population-level variation and the costs and benefits leaders and followers encur across distinct leadership systems. 
+Across human societies, the influence of leaders stands to substantially shape the nature of group structure and group outcomes. Simultaneously, social norms, pressures from competing leaders or rival or cooperative groups, and followers preferences can greatly constrain a leader's agenda. The interactions between the strategies of individual leaders, pressures of followership, and group dynamics are likely to strongly contribute to organizational variation across human populations including social and economic trajectories [@wiessner_risk_1982] and cultural evolutionary processes [@henrich_big_2015]. 
+
+Leadership and followership are critical in understanding group structure and have been the focus of much scientific attention across psychology, sociology, political science, and managerial studies. Until recently, this very large body of work was relatively disconnected from approaches to leadership in anthropology and biology. Under a unifying evolutionary framework, social and biological scientists have now produced a sizable body of theory on the evolution and cross-cultural patterning of leadership and followership [e.g., @henrich_big_2015; @richerson_tribal_2009; @van_vugt_evolutionary_2006; @pietraszewski_evolution_2019; @hooper_theory_2010 and @kaplan_evolutionary_2009; @von_rueden_roots_2014], accompanied by a growing body of empirical results [e.g., @bowser_womens_2010; @cheng_two_2013; @garfield_investigating_2019; @garfield_evolutionary_2019; @von_rueden_leadership_2014; @von_rueden_sex_2018; @smith_leadership_2016]. This integration as been informative. Drawing on the study of leadership in evolutionary perspective and across diverse, small-scale and traditional societies can help develop more generalizable theories and offer applications to shape organizational structure in ways which are more consistent with human evolutionary history and evolved leader-follower psychologies [@von_rueden_leadership_2015; @garfield_review_2019]. Nonetheless, much of this work has focused on community or political leaders, often overlooking the nature of leadership and followership across social domains and at all levels of social organization. Moreover, while the benefits leaders accrue for their services have received substantial attention the costs of leadership for both leaders and followers have also been relatively under-investigated. Current outstanding questions for evolutionary leaderhip scholars include the degree to which the nature of leadership is shaped by population-level variation and the costs and benefits leaders and followers encur across distinct leadership systems. 
 
 Evolutionay scholars typically define leaders as individuals who maintain disproportionate influence over decision-making within groups [@von_rueden_leadership_2015], whatever the group may be. Leadership roles are also often associated with specific rights and responsibilities. Not surprisingly, the functions leaders serve then are often closely linked to group contexts and the salient challenges groups face. Certain types of groups, such as kin groups, economic groups, or political groups, may tend to favor leaders with specific qualities, however there can be substantial variation in the traits of leaders within these groups as well as between them.
 
-We first briefly review current theoretical, ethnographic, and empirical perspectives on the qualities of leaders, the functions they serve, and the costs and benefits of leadership for both leaders and followers across human societies, including WEIRD and non-WEIRD populations. We then outline the aims and methods of the current cross-cultural study, before presenting results and interpretations.  
+We first briefly review current theoretical, ethnographic, and empirical perspectives on the qualities of leaders, the functions they serve, and the costs and benefits of leadership for both leaders and followers across human societies, including WEIRD and non-WEIRD populations. We then outline the aims and methods of the current cross-cultural study, before presenting results and interpretations. Through novel empirical and exploratory analyses encompassing the full range of cultural diversity and social contexts, we aim to advance leadership studies across disciplines and provide researchers with a foundation for more detailed approaches.   
 
 
 <!-- Reference a historical example of a short term leader implementing change with lasting effects, good and/or bad. -->
 
 ## The functions of leadership across cultures and contexts
 
-Leadership as a phenomena is a universal feature of human groups; among all societies there are particular contexts in which one individual maintains greater influence. Also, adopting the broad definition of leadership given above, parents can be defined as leaders of nuclear families. Strong community leadership, however, is common cross-culturally [@garfield_review_2019; @lewis_leaders_1974].  
+Leadership is a universal feature of human groups; among all societies there are particular contexts in which one individual maintains greater influence over group behavior and outcomes. Additionally, under the broad definition of leadership given above, parents can be defined as leaders of nuclear families. Strong community leadership, however, is common cross-culturally including among hunter-gatherers and relatively small-scale societies [@garfield_review_2019; @lewis_leaders_1974].  
 
-The emergence of leadership and the functions leaders serve across cultures is closely tied to social and political structure. 
+The nature of leaderhsip across human societies and social contexts is highly diverse and the emergence of leaders and the functions they serve are closely tied to social and political structure. Among ethnographically described small-scale societies which generally lack multi-level, institutionalized social and political structures, leadership at the community level is typically informal and ephemeral and tends to emerge contextually when demands of coordination or conflict resolution require a managerial presence [@von_rueden_leadership_2015]. Leadership tends to be context-specific and leaders in such contexts often draw on persuasive capacities and leverage community-based respect and greater knowledge and social support to achieve or maintain community influence. The theoretical and ethnographic literature suggests these demands most commonly arise in the contexts of conflict resolution and collective actions. Demands of mediation in within-group conflict resolution, although variable in scale, are probably a universal feature of human groups. Demands of between-group interactions, including both conflict and cooperation are also very common across small-scale societies, including hunter-gatherers. Representing the group and managing both internal and external relationships and conflicts are expected to be the most salient functions of community leaders. 
 
-Among ethnographically described small-scale societies which generally lack multi-level, institutionalized social and political structures, leadership at the community level is typically informal and ephemeral and tends to emerge contextually when demands of coordination or conflict resolution require a managerial presence [@von_rueden_leadership_2015]. Leadership tends to be context-specific and leaders in such contexts often draw on persuasive capacities and leverage community-based respect, their greater knowledge and social support to express their influence. The theoretical and ethnographic literature suggests these demands most commonly arise in the contexts of conflict resolution and collective actions. Demands of mediation in within-group conflict resolution, although variable in scale, are probably a universal feature of human groups. Demands of between-group interactions, including both conflict and cooperation are also very common across small-scale societies, including hunter-gatherers. Representing the group and managing both internal and external relationships and conflicts are expected to be the most salient functions of community leaders. 
+Within communities, leaders may emerge whenever groups of individuals form. The role of leaders in ritual contexts, such as in initiations, and in providing social services, including facilitating marriages and organizing social activities, are also expected to be common functions leaders serve. 
 
-Within communities, leaders may emerge whenever groups of individuals form. The role of leaders in ritual contexts, such as in initiations, and in providing social services, including facilitating marriages and organizing social activities, are also relatively common. 
+Increased sedentarization and defensibility of resources is often associated with both social stratification and an institutionalized managerial role and stronger authority of community leaders. Among horticulturalists and agriculturalists managerial leadership can promote for more efficient use of shared resources such as water reserves and cooperative labor. Pastoralists and coastal populations often face similar pressures surrounding grazing lands and fishing access. In the wake of economic intensification, the function of leadership becomes increasing associated with the distribution of resources.
 
-Increased sedentarization and defensibility of resources is often associated with both social stratification and an institutionalized managerial role of community leaders. Among horticulturalists and agriculturalists managerial leadership can promote for more efficient use of shared resources such as water reserves and cooperative labor. Pastoralists and coastal populations can face similar pressures surrounding grazing lands and fishing access. In the wake of economic intensification, the function of leadership becomes increasing associated with the distribution of resources.
+Defensibility of resources necessarily creates increased oppurtunities for resource management and is often associated with increased territoriality and increased pressures of inter-group conflicts. Community leaders among populations more reliant on domesticated plant foods, livestock, and specific territories are often required to manage military forces and develop both offensive and defensive strategies in warfare, more so than mobile populations that rely on disperrsed, less defesnible resources.
 
-Defensibility of resources is also often associated with increased territoriality and increased pressures of inter-group conflicts. Community leaders among populations more reliant on domesticated plant foods, livestock, and specific territory are often forced to manage military forces and develop offensive and defensive strategies in warfare, more so than mobile populations.
-
-In WEIRD societies, community leaders are primarily heads of governmental and corporate bodies with specific responsibilities and functions associated with their position. The structure of these organizations are generally organized hierarchically with nested bodies and a formal internal 'chain of command.' At the higher levels of large-scale organizations, leaders primarily serve as representatives in inter-group interactions, facilitate the creation and adoption of policies, and serve as a figure head embodying the strategic vision of the organization. They are not often involved in resolving immediate conflicts, such as disputes between individuals or nested bodies, however, they are often the final end-point in a decision making hierarchy and the results of a single decision of these leaders can trickle down through industry or government with global ramifications. 
+In WEIRD societies, community leaders are primarily heads of governmental and corporate bodies with institutionalized responsibilities and functions associated with their position. The structure of these organizations are generally organized hierarchically with nested bodies and a formal internal 'chain of command.' At the higher levels of large-scale organizations, leaders primarily serve as representatives in inter-group interactions, facilitate the creation and adoption of policies, and serve as figure heads embodying the strategic vision of the organization. They are not often involved in resolving immediate conflicts, such as disputes between individuals or nested bodies, however, they are often the final end-point in a decision making hierarchy and the results of a single decision of these leaders can trickle down through industry or government with global ramifications. 
 
 The Global Leadership and Organizational Behavior Effectiveness (GLOBE) project is a large-scale international research program aimed at understanding leadership effectiveness and cultural variation across large organizations. The GLOBE project has produced multiple cross-national data sets on leadership and hundreds of publications. For example, *The GLOBE Study of CEO Leadership Behavior and Effectiveness in 24 Countries* draws on data from over 1,000 CEOs and over 5,000 senior executives from corporations in varied of industries across 24 countries. The goals of the GLOBE CEO Study were to address (1) how national culture influences expectations for the behaviors of leaders, (2) which behaviors of CEOs are typically associated with organizational success, (3) differences between high-functioning and low-functioning CEOs, and (4) the importance of CEO behaviors aligning with societal expectations. Through path analysis the study concluded that cultural values indirectly predict CEO leadership behavior through culturally endorsed leadership expectations. That is, leaders moderate their behavior through culturally learned values and leadership-specific values.  
 
@@ -61,9 +61,9 @@ The GLOBE CEO Study defines six "global leadership behaviors" developed from 21 
 
 ## The qualities of leaders across cultures and contexts
 
-Despite immense variation, there do seem to be some commonalities among the qualities of community leaders. Across human societies, when strong community leaders exist, they tend to be high status males who embody the ideal qualities most respected by the group and necessary for successful leadership in the domains in which they have differential influence. Elders, respected individuals, and highly intelligent or knowledgeable individuals tend to have increased influence over community decisions across cultures, including among the most egalitarian hunter-gatherers, stratified chiefdoms, and contemporary state-level organizations. 
+Despite immense variation, there do seem to be some commonalities among the qualities of community leaders. Across human societies, when strong community leaders emerge, they tend to be high status males who embody the ideal qualities most respected by the group and necessary for successful leadership in the domains in which they have differential influence. Elders, respected individuals, and highly intelligent or knowledgeable individuals tend to have increased influence over community decisions across cultures, including among the most egalitarian hunter-gatherers, stratified chiefdoms, and contemporary state-level organizations. 
 
-Among small-scale societies with relative egalitarianism and local political autonomy community leaders, in addition to being older, respected males, tend to be individuals with large social networks and strong social support. Physically, leaders across multiple contexts tend to be taller and more physically formidable. Such physical embodiment might equip individuals for more effective leadership in the context of inter-group conflicts as well as in the context of intra-group dispute settlement and in management of collective actions. Charisma and oratory skills are common properties of leaders, but are especially important in the context of egalitarianism where individual leaders must rely on persuasion and more subtle forms of influence to convince community members to come to agreement. 
+Among small-scale societies with relative egalitarianism and local political autonomy community leaders, in addition to being older, respected males, tend to be individuals with large social networks and strong social support. Physically, leaders across multiple contexts tend to be taller and more physically formidable. Such embodied capital might equip individuals for more effective leadership in the context of inter-group conflicts as well as in the context of intra-group dispute settlement and in management of collective actions. Charisma and oratory skills are common properties of leaders, but are especially important in the context of egalitarianism where individual leaders must rely on persuasion and more subtle forms of influence to convince community members to come to agreement. 
 
 
 
@@ -74,11 +74,11 @@ Among small-scale societies with relative egalitarianism and local political aut
 
 ## The benefits of leadership across cultures and contexts
 
-The ability to shape group dynamics can provide enormous individual benefits to leaders, even if 'just for a while.' Fundamentally, leaders in any context are able to promote group policies which either align with their individual interests or which are not especially costly for themselves.
+The ability to shape group dynamics can provide enormous individual benefits to leaders, even if 'just for a while.' Fundamentally, leaders in any context have the oppurtunity to promote group-level policies which either align with their individual interests or which are not especially costly for themselves, their kin, or their close social partners.
 
 Across diverse populations and organizations, community leaders, political leaders, and organization leaders tend to have greater mating opportunities and therefore, given the aforementioned male-bias in top leadership positions, these leaders also tend to have greater reproductive success. 
 
-Institutionalized leadership positions are also typically associated with increased social status. 
+Institutionalized leadership positions are also often, if not universally, associated with increased social status. The causal relationship between high social status and community or political leadership is complex and likely to be context-specific and bi-directional.  
 
 Leaders and high-status individuals are also more likely to be the recipients of social support and material benefits in times of need. 
 
@@ -86,7 +86,7 @@ Leaders and high-status individuals are also more likely to be the recipients of
 
 ## The costs of leadership across cultures and contexts
 
-The unique costs associated with leadership positions have received less attention, relative to the benefits of leadership. 
+The unique costs associated with leadership positions have received less attention, relative to the benefits of leadership across disciplines. 
 
 Group responsibilities necessarily impose opportunity costs on individual priorities and agendas. 
 
@@ -97,7 +97,7 @@ In managing collective action and enacting group-level policies, some behaviors 
 
 # Study aims
 
-Evolutionary theoretical models and empirical studies often seek to integrate findings within a broad framework of human cultural diversity. The universality of human leadership systems and the incredible diversity among the qualities of leaders across cultures and context and the functions they serve is difficult to capture. Scholars are then left to haphazardly self-select ethnographic cases or rely on the self-selected reviews of others. Here, we provide the first broad and near comprehensive view of the qualities and functions of leaders across from a representative cross-cultural sample. We also aim to understand how leader qualities relate to their functions and how these relationships vary across social contexts and levels of cultural complexity. We hope these empirical results will facilitate more fine-grained approaches within leadership studies and greater theoretical and empirical work beyond community leadership, while also revealing the importance of a broad, cross-cultural perspective in understanding the psychology and cultural patterning of perhaps the most foundation component of human social behavior and social organization. 
+Evolutionary theoretical models and empirical studies often seek to integrate findings within a broad framework of human cultural diversity. The universality of human leadership systems and the incredible diversity among the qualities of leaders across cultures and contexts and the functions they serve is difficult to capture. Scholars are then left to haphazardly self-select ethnographic cases or rely on the self-selected reviews of others for generalizations. Here, we provide the first broad and near comprehensive view of the qualities and functions of leaders across human societies from a representative cross-cultural sample. We also provide the first comparative empirical view describing the costs and benefits of leadership for both leaders nad followers in an evolutionary biological framework. We also aim to understand how the qualities and functions of leaders vary across social contexts and levels of cultural complexity. We hope these exploratory results will facilitate more fine-grained approaches within leadership studies and greater theoretical and empirical work beyond community leadership, while also revealing the importance of a broad, cross-cultural perspective in understanding the psychology and cultural patterning of perhaps the most foundational component of human social behavior and social organization. 
 
 
 # Methods
@@ -109,9 +109,9 @@ We evaluate the cross-cultural frequency in the functions and qualities of leade
 Here we draw on the same database of 1212 ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the electronic Human Relations Area Files (eHRAF) database [@naroll_proposed_1967]. The leadershipdata database was designed to capture a wide sample of the ethnographic record of leadership. For the current study, two authors coded each paragraph for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. 
 
 
-The operationalized qualities and functions (See Table X) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Tables X. ZG then followed the same process of coding the entire sample of 1212 text records for the X operationalized variables. DISCUSS IRR. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository. 
+The operationalized qualities and functions (See Table X) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, while also creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Tables X. ZG then followed the same process of coding the entire sample of 1212 text records for the X operationalized variables. DISCUSS IRR. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository (a dataframe named leader_text2). 
 
-Coding operationalizations of the costs and benefits of leadership were developed *a priori* based on our reading of the evolutionary theoretical literature from anthropology and biology. For both followers and leaders, we code if there is evidence of costs or benefits in the following categories: social status/reputation, reduced or increased risk of harm or conflict, social services, territory, mating, fitness, food resources, other resources, and other costs or benefits not captured by these categories. See Table X. 
+Coding operationalizations of the costs and benefits of leadership were developed *a priori* based on our reading of the evolutionary theoretical literature from anthropology and biology. For both followers and leaders, we code if there is evidence of costs or benefits in the following categories: social status, reduced or increased risk of harm or conflict, social services, territory, mating, fitness, food resources, material resources, and other miscelaneous costs or benefits not captured by these categories. See Table X. 
 
 For additional details on ethnographic sampling and creating of the leadershipdata package see CITE. 
 
