* Fixed bug in bib file. * Added cluster analyses with jaccard distance. * Edited stats section of ms.

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -117,14 +117,19 @@ For additional details on ethnographic sampling and creating of the leadershipda
 
 ## Statistical analysis
 
-We analyzed data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to discover the qualities, functions, benefits and costs of leadership that are most frequently noted in the ethnographic record.  
+We analyzed data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to discover the qualities, functions, benefits and costs of leadership that are most and least frequently noted in the ethnographic record.
 
-<!-- At the text record level, hierarchical cluster analysis was then used to identify natural groupings of all our coded variables. If variables from a model clustered together, and separately from the other variables, that would lend support to the theoretical cohesiveness of that model. If, on the other hand, variables from different models clustered together, that would suggest theoretical models may need revision or that clusters had identified components of a novel theoretical model.  -->
+Our second goal was to discover "features" in our data, e.g., to determine if particular variables tended to covary or cluster together. Such features might lend support to existing theories; for instance they might correspond to "prestige" and "dominance" [@henrich_evolution_2001]. Or they might suggest new and theoretically important dimensions of leadership. 
 
+There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. To reduce the dimensionality of the `r length(quality_vars)` leader quality variables and the `r length(function_vars)` leader function variables, all of which take binary values (0, 1), we used logistic PCA from the logisticPCA package. This algorithm projects the natural parameters of the saturated model onto the lower $k-$dimension space that minimizes the Bernoulli deviance [@logisticPCA].
 
-To reduce the dimensionality of the `r length(quality_vars)` quality variables and the `r length(function_vars)` function variables, all of which take binary values (0, 1), we used logistic PCA from the Binary Dimensionality Reduction (logisticPCA) package [@logisticPCA]. Prior to analysis we removed all rows that had no evidence for any variable. We optimized rank, $k$, and $m$ (the value to approximate the saturated model) using cross-validation, per recommendation of the package authors. Results from logistic PCA stand to (1) reveal which measures (coded variables) distinguish leaders and (2) produce a quantitiave measure of leader qualities and leader functions for additional exploratory analyses. 
+Prior to analysis we removed all rows that had no evidence for any variable, which resulted in `r nrow(pca_data_qualities)` text records for the leader quality variables and `r nrow(pca_data_functions)` text records for the leader function variables. We optimized rank, $k$, and a tuning parameter, $m$ (the value to approximate the saturated model), using cross-validation, per recommendation of the package authors.
 
+We also performed hierarchical cluster analysis on our quality and function variables. We computed distance between our binary vectors using both $1-cor(x, y)$ and asymmetric binary distance (Jaccard distance), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the pvclust package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
 
+Our third goal was to determine which leader and follower benefits and costs were most commonly mentioned in the ethnographic record.
+
+Our fourth goal was to explore associations between the principle components of leader qualities and functions, and culture-level variables such as mode of subsistence, social complexity, population density, and group size. We used linear mixed effects models from the lme4 package [@xx], with PC1 and PC2 as outcome variables, culture-level variables as predictors, and documents nested within cultures as grouping variables for random intercepts. 
 # Results
 
 The geographic distribution of the cultures in our sample is displayed in Figure \@ref(fig:geographic), with cultures labeled by mode of subsistence and represented by a symbol proportional to the number of documents that provide ethnographic texts for that culture (for details, see Table S1). The `r nrow(leader_text2)` text records from `r length(unique(leadershipdata::documents$d_ID))` unique documents describing `r length(unique(leader_text2$d_culture))` cultures were generally short, with a median word count of X, a mean of X, and standard deviation of X. The vast majority of text records pertained to male leadership (`r male_leader_pct`%) and very few pertained to female leadership (`r female_leader_pct`%), with some records not sex-specific. There were female leaders in almost all types of groups, however, except military and religious. Female leaders did tend to lead at the kin group and other residential subgroups, though: `r female_residential_pct`% of female leaders led at the residential subgroup level, for instance, compared to `r male_residential_pct`% of male leaders.
@@ -157,7 +162,7 @@ p_map
 
 ## Distribution of text records by mode of subsistence and group type
 
-The type of group to which a leader text referred was coded into seven categories. Figure \@ref(fig:groupsex) indicates the proportion of text records that were categorized into each of these groups.
+The type of group to which a leader text referred was coded into seven categories. Figure \@ref(fig:groupsex) indicates the proportion of text records that were categorized into each of these groups, broken out by mode of subsistence.
 
 ```{r groupsex, fig.width=20, fig.height=10, fig.cap="The distribution of text records by subsistence and group type. Areas of the bars are proportional to the number of text records in that category."}
 plot_group_subsis #+ plot_group_sex
