--- a/Leader2.bib
+++ b/Leader2.bib
@@ -6633,7 +6633,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	pages = {285--303}
 }
 
-@article{marshall_!kung_1960,
+@article{marshall_kung_1960,
 	title = {!{Kung} bushman bands},
 	volume = {30},
 	number = {04},
@@ -7043,7 +7043,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	year = {2015}
 }
 
-@article{suzuki_pvclust:_2006,
+@article{suzuki_pvclust2006,
 	title = {Pvclust: an {R} package for assessing the uncertainty in hierarchical clustering},
 	volume = {22},
 	number = {12},
